--- a/weapp/static_v2/js/view/apps_prize_keywordpane/template.html
+++ b/weapp/static_v2/js/view/apps_prize_keywordpane/template.html
@@ -1,5 +1,5 @@
 <script id="apps-prize-keywordpane-src" type="text/x-handlebar-tmpl">
-    <div class="xui-newKeyView pa xa-keywordBoxDiv-v2 xui-keywordBoxDiv-v2">
+    <div class="xui-newKeyView pa xa-keywordBoxDiv-v2 xui-keywordBoxDiv-v2 xui-hide">
         <div class="xui-key">
              <div class="xui-i-left"><span class="xui-colorRed">*</span> 规则：</div>
              <div class="xui-i-right">
