--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1438,7 +1438,8 @@ button.xui-deleteImageButton{
 	width: 360px;
 	border:1px solid #ccc;
 	background-color: #fff;
-
+	box-shadow: 1px 2px 36px -6px;
+	border-radius: 5px;
 }
 .xui-keywordBoxDiv-v2 .xui-key {
 	width: 100%;
