--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -307,17 +307,17 @@
               <div class='xa-customProperties'>
                 <ul class="xui-clearListStyle clearfix">
                     {% for property in product.properties %}
-                    <li class="xui-i-templateProperty xa-property pb10" data-property-id="{{property.id}}">
+                    <li class="xui-i-templateProperty xa-property" data-property-id="{{property.id}}">
                         <input class="xui-i-propertyName xui-propertyNameBtn xa-name" readonly=true value='{{property.name}}' maxlength="15">
                         <input class="xui-i-propertyValue xui-propertyValueInput xa-contenteditable xa-value" value='{{property.value}}' maxlength="255">
-                        <a class="xa-deleteProperty">删除</a>
+                        <a class="xa-deleteProperty xui-deleteProperty">删除</a>
                     </li>
                     {% endfor %}
                     <div class="errorHint"></div>
                 </ul>
               </div>
               <div class="xa-instantProperties">
-                <a href="javascript:void(0);" class="xa-addProperty xui-i-propertyName xui-propertyNameBtn pb15" style="display:block;margin-left:10px;width:55px;">+添加</a>
+                <a href="javascript:void(0);" class="xa-addProperty xui-i-propertyName xui-propertyNameBtn pb15" style="display:block;width:55px;">+添加</a>
               </div>
 	      </div>
 		</div>
