bug 5381修改商品--删除按钮小手显示；bug 5380 添加属性样式排列

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -307,10 +307,10 @@
               <div class='xa-customProperties'>
                 <ul class="xui-clearListStyle clearfix">
                     {% for property in product.properties %}
-                    <li class="xui-i-templateProperty xa-property pb10" data-property-id="{{property.id}}">
+                    <li class="xui-i-templateProperty xa-property" data-property-id="{{property.id}}">
                         <input class="xui-i-propertyName xui-propertyNameBtn xa-name" readonly=true value='{{property.name}}' maxlength="15">
                         <input class="xui-i-propertyValue xui-propertyValueInput xa-contenteditable xa-value" value='{{property.value}}' maxlength="255">
-                        <a class="xa-deleteProperty">删除</a>
+                        <a class="xa-deleteProperty xui-deleteProperty">删除</a>
                     </li>
                     {% endfor %}
                 </ul>
