--- a/weapp/static_v2/js/view/apps_prize_keywordpane/template.html
+++ b/weapp/static_v2/js/view/apps_prize_keywordpane/template.html
@@ -15,7 +15,8 @@
         </div>
 
         <div class="tc pb20 cb">
-            <span class="btn btn-default xa-cancel xui-delete ml20 ">完&nbsp;&nbsp;成</span>
+            <span class="btn btn-success xa-add-single-keyword ml20 xui-delete">添&nbsp;&nbsp;加</span>
+            <span class="btn btn-default xa-cancel xui-delete ml20 ">取&nbsp;&nbsp;消</span>
         </div>
     </div>
 </script>
