--- a/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
@@ -5,7 +5,7 @@
 			href="javascript:void(0);"
 			class="ml5"
 		>请选择优惠券	</a>
-		<input style="width:0;background:#F9F9F9;border:0" type="text" data-validate="require-notempty::请选择一张优惠券" />
+		<input style="width:0;background:#F9F9F9;border:0" type="text" />
 		<div class="errorHint" style="margin-left: 58%;width: 100px;"></div>
 	</div>
 	<div class="xui-inline xa-selectedCoupon xa-optionTarget {{#if prize.name}}{{else}}xui-hide{{/if}}">
