修改二维码

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
@@ -361,6 +361,7 @@
 </div>
 <div class="xui-attention xa-attention none">
     <div class="xui-twoDimensionBox">
+        <img src="http://weappstatic.b0.upaiyun.com/static_v2/img/mileke.jpg" alt="" class="xui-twoDimension">
         <div class="xui-closeBtn xa-closeBtn"></div>
     </div>
 </div>
