--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
@@ -329,7 +329,8 @@
         <div class="xui-otherState">
             <div class="xui-i-title f12 xui-spritebg mt10">其他说明</div>
             <div class="xui-content f12">
-                <div>  “斑马来了”后台统计参与抢物品票数最多的前60名，公布在“斑马来了”微信公众账号最新活动内。请您于3个工作日内（10月26日—10月28日）与斑马客服联系并告知您的收货地址。<span style="color:#FDEF00;font-weight:bold;">（蔬菜配送地址，仅限北京六环内）</span></div>
+                <div>  “斑马来了”后台统计参与抢物品票数最多的前60名，公布在“斑马来了”微信公众账号最新活动内。请您于3个工作日内（10月26日—10月28日）与斑马客服联系并告知您的收货地址。</div>
+                <div style="color:#FDEF00;font-weight:bold;">（蔬菜配送地址，仅限北京六环内）</div>
                 <div>客服电话：王老师 <b>13488651517</b> 小智老师 <b>13643515192</b> </div>
             </div>
         </div>          
