--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -151,6 +151,8 @@
         }
         .wui-SignCircle.wa-sign-board .wui-SignChr-Days b{
             font-size: 3em;
+            font-weight: 700;
+            margin-left: 25px;
         }
         .wui-SignCircle.wa-sign-board .wui-SignChr-Tail{
             color:#626262;
