--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1495,7 +1495,7 @@ button.xui-deleteImageButton{
 	position: relative;
 	top: 8px;
 }
-.xui-patterns{
+.xui-keywordpane-patterns.xui-patterns{
 	color:#333333;
 	position: relative;
 	top:-5px;
