--- a/weapp/static_v2/js/view/apps_prize_keywordpane/template.html
+++ b/weapp/static_v2/js/view/apps_prize_keywordpane/template.html
@@ -23,7 +23,7 @@
 
 <script id="apps-prize-badge-src" type="text/x-handlebar-tmpl">
     {{#each keywords}}
-        <div  class="xui-patterns xa-data-patterns fl mt10 ">
+        <div  class="xui-patterns xui-keywordpane-patterns xa-data-patterns fl mt10 ">
             <div class="xui-i-key fl ">
                 <span class="data-keyword" data-keyword="{{@key}}">{{@key}}</span>
             </div>
