修改页面加人cdn图片

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
@@ -6,7 +6,7 @@
 <style>
     .xui-mlkActivityPage{
         width: 100%;
-        background: url('/static_v2/img/activity/bg.jpg') #80c621 no-repeat;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/bg.jpg') #80c621 no-repeat;
         -webkit-background-size: 100%;
         background-size: 100%;
         box-sizing:border-box;
@@ -64,7 +64,7 @@
         width: 100%;
         height: 18px;
         line-height: 18px;
-        background: url('/static_v2/img/activity/cutLine.jpg') no-repeat center;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/cutLine.jpg') no-repeat center;
         -webkit-background-size: 100%;
         background-size: 100%;
         text-align: center;
@@ -72,7 +72,7 @@
         margin-bottom: 10px;
     }
     .xui-spritebg{
-        background: url('/static_v2/img/activity/mlkSprite.png') no-repeat;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/mlkSprite.png') no-repeat;
         -webkit-background-size: 82px 81px; 
         background-size: 82px 81px;
     }
@@ -132,7 +132,7 @@
         margin-top: 18px;
     }
     .xui-rankingList li:first-child i,.xui-rankingList li:nth-child(2) i,.xui-rankingList li:nth-child(3) i{
-        background: url('/static_v2/img/activity/mlkSprite.png') no-repeat;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/mlkSprite.png') no-repeat;
         -webkit-background-size: 82px 81px; 
         background-size: 82px 81px;
     }
@@ -208,7 +208,7 @@
         width: 31px;
         height: 31px;
         display: inline-block;
-        background: url('/static_v2/img/activity/mlkSprite.png') no-repeat;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/mlkSprite.png') no-repeat;
         -webkit-background-size: 82px 81px; 
         background-size: 82px 81px;
         background-position: 0 -49px;
@@ -219,7 +219,7 @@
     .xui-attention .xui-twoDimensionBox{
         width: 260px;
         height: 286px;
-        background: url('/static_v2/img/activity/attention.png') no-repeat;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/attention.png') no-repeat;
         -webkit-background-size: 100%;
         background-size: 100%;
         position: fixed;
@@ -250,7 +250,7 @@
         top:0;
         width: 100%;
         height: 74%;
-        background: url(/static_v2/img/activity/share.png) no-repeat;
+        background: url('http://weappstatic.b0.upaiyun.com/static_v2/img/share.png') no-repeat;
         -webkit-background-size: 100%;
         background-size: 100%;
         z-index: 10001;
