--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -59,6 +59,9 @@
             padding-bottom: 5px;
             padding-top: 5px;
         }
+        .xa-dayly-setting-topGap{
+            display: none;
+        }
         .propertyGroup_property_dynamicControlField_content{
             width: 100%;
             border:1px solid #DDDDDD;
