--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -1004,24 +1004,13 @@ input.ui-input-text, textarea.ui-input-text {
     font-size: 1.1rem;
     line-height: 45px;
 }
-.xui-productDetailPage .disF .xui-productName{
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    flex-basis: auto;
-    display: block;
-    flex-basis: 1px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    word-wrap: break-word;
-    overflow: hidden;
-    -webkit-box-pack: center;
-    height: 2.7rem;
-    padding-right:2px;
+.xui-productDetailPage .xui-section-boldItemText{
+    margin-top: 8px;
+}
+.xui-productDetailPage .xui-productInfoBox{
+    margin-right: 5em;
 }
 .xui-productDetailPage .xui-fav{
-    position: relative;
     display: -webkit-box;
     -webkit-box-align: center;
     -webkit-box-pack: center;
@@ -1033,6 +1022,8 @@ input.ui-input-text, textarea.ui-input-text {
     color: #999;
     width: 5em;
     font-size: 0.75rem;
+    top:0;
+    right: 0;
 }
 .xui-productDetailPage .xui-fav::before{
     width:20px;
